--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="my_portfolio.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>   
 <body>
@@ -27,7 +27,7 @@
     <h1>MY PORTIFOLIO</h1>
     <div class="home-content">
         <div class="home-image">
-            <img class="home-image" src="c:\Users\Lenovo\Downloads\WhatsApp Image 2024-09-26 at 6.45.16 PM.jpeg" alt="Sourabh Image">
+            <img class="home-image" src="WhatsApp Image 2024-09-26 at 6.45.16 PM.jpeg" alt="Sourabh Image">
         </div>
         <div class="home-text">
             <p class="home-text">Hello Folks! <br>I'm Sourabh Tripathi ,currently I'm studying Engineering. <br>
