--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
      <h1>PROJECT'S</h1>
      <div class="project-container">
         <div class="project">
-            <img class="project" src="c:\Users\Lenovo\Pictures\Screenshots\Screenshot 2024-10-03 003358.png" alt="Project Image">
+            <img class="project" src="Screenshot 2024-10-03 003358.png" alt="Project Image">
             
             <div class="change-image">
                 <p>This is a stone paper scissor game. In this game, you can play with the computer.</p>
@@ -106,20 +106,20 @@
         </div>
        
         <div class="project">
-            <img class="project" src="c:\Users\Lenovo\Pictures\Screenshots\Screenshot 2024-09-28 184943.png" alt="Project Image">
+            <img class="project" src="Screenshot 2024-09-28 184943.png" alt="Project Image">
             <div class="change-image">
                 <p>This is a simple calculator app built using HTML, CSS, and JavaScript.</p>
             </div>
         </div>
         <div class="project">
-            <img class="project" src="c:\Users\Lenovo\Pictures\Screenshots\Screenshot 2024-09-28 185331.png" alt="Project Image">
+            <img class="project" src="Screenshot 2024-09-28 185331.png" alt="Project Image">
             <div class="change-image">
                 <p>This is a todo app, here you can write your daily work.</p>
             </div>
         </div>
 
         <div class="project">
-            <img class="project" src="c:\Users\Lenovo\Pictures\Screenshots\Screenshot 2024-09-28 190008.png" alt="Project Image">
+            <img class="project" src="Screenshot 2024-09-28 190008.png" alt="Project Image">
             <div class="change-image">
                 <p>This is an online food app from which you can order your favourite food</p>
             </div>
