--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <p class="nav-bar">Er. Sourabh Tripathi</p>
         <ul class="nav-bar">
          
-            <li class="nav-bar"><a class="nav-bar" href="my_portfolio.html#5">Contact</a></li>
-            <li class="nav-bar"><a class="nav-bar" href="my_portfolio.html#4">Project's</a></li>
-            <li class="nav-bar"><a class="nav-bar" href="my_portfolio.html#1">Home</a></li>
-            <li class="nav-bar"><a class="nav-bar" href="my_portfolio.html#3">Education</a></li>
-            <li class="nav-bar"><a class="nav-bar" href="my_portfolio.html#2">About Me</a></li>
+            <li class="nav-bar"><a class="nav-bar" href="index.html#5">Contact</a></li>
+            <li class="nav-bar"><a class="nav-bar" href="index.html#4">Project's</a></li>
+            <li class="nav-bar"><a class="nav-bar" href="index.html#1">Home</a></li>
+            <li class="nav-bar"><a class="nav-bar" href="index.html#3">Education</a></li>
+            <li class="nav-bar"><a class="nav-bar" href="index.html#2">About Me</a></li>
         
     </ul>
     </div>
